Add lottie-driven Scrubby component. Add script to generate lottie config data from a directory of sequenced images.

--- a/public/base.css
+++ b/public/base.css
@@ -10,8 +10,7 @@ html *::after {
 }
 
 body {
-  margin: 0 auto;
-  max-width: 40rem;
+  margin: 0;
   background-color: #fcfcfc;
 }
 
@@ -23,4 +22,54 @@ body > * {
   body > * {
     margin: 3rem 0;
   }
+}
+
+.Block {
+  overflow: hidden;
+  position: relative;
+  margin-top: 0;
+  min-height: 100vh;
+}
+
+.Block[data-viewports-tall='2'] {
+  min-height: 200vh;
+}
+
+.Block[data-viewports-tall='4'] {
+  min-height: 400vh;
+}
+
+.Block[data-viewports-tall='8'] {
+  min-height: 800vh;
+}
+
+.Block-media {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-height: 100vh;
+}
+
+.Block-media.is-fixed {
+  clip: rect(0, auto, auto, 0);
+  -webkit-clip-path: inset(0 0 0 0);
+  clip-path: inset(0 0 0 0);
+  max-height: none;
+}
+
+.Block-media.is-fixed > * {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.Block-media.is-fixed > * _::-webkit-full-page-media,
+.Block-media.is-fixed > * _:future,
+:root .Block-media.is-fixed > * {
+  transform: translateZ(0);
 }
