Rewrite embeds to allow them to run in Apple News, and provide example project files

--- a/public/base.css
+++ b/public/base.css
@@ -2,28 +2,28 @@
   font-family: 'ABCSans';
   font-style: normal;
   font-weight: normal;
-  src: url('fonts/abcsans-regular.woff2') format('woff2');
+  src: url('abcsans-regular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'ABCSans';
   font-style: normal;
   font-weight: bold;
-  src: url('fonts/abcsans-bold.woff2') format('woff2');
+  src: url('abcsans-bold.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'ABCSerif';
   font-style: normal;
   font-weight: normal;
-  src: url('fonts/abcserif-regular.woff2') format('woff2');
+  src: url('abcserif-regular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'ABCSerif';
   font-style: normal;
   font-weight: bold;
-  src: url('fonts/abcserif-bold.woff2') format('woff2');
+  src: url('abcserif-bold.woff2') format('woff2');
 }
 
 html {
